--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ bady {
 
 #player {
     position: relative;
-    height: 60px;
-    width: 70px;
+    height: 50px;
+    width: 110px;
     left: 20px;
     top: 250px;
 }
@@ -36,15 +36,16 @@ bady {
     background-size: cover;
 }
 
-.alien {
-    position: relative;
-
-    
-}
-.alien img{
+.alien1, .alien2, .alien3  {
+    position: relative; 
     height: 60px;
     width: 70px;
+    left: 542px;
 }
+/*.alien1 img, .alien2 img, .alien3 img{
+    height: 60px;
+    width: 70px;
+}*/
 
 .explosao {
     width: 53px;
