--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-bady {
+body {
     height: 100vh;
     width: 100%;
     margin: 0;
@@ -15,20 +15,21 @@ bady {
     background-color: black;
     background-image: url('./assets/image/space.png');
     height: 600px;
-    width: 600px;
+    width: 1000px;
     margin: auto;
 }
 
 #player {
     position: relative;
     height: 50px;
-    width: 110px;
+    width: 100px;
     left: 20px;
     top: 250px;
+    z-index: 999;
 }
 
 .laser {
-    position: relative;
+    position: absolute;
     width: 40px;
     height: 30px;
     background-image: url('./assets/image/shoot.png');
@@ -37,22 +38,87 @@ bady {
 }
 
 .alien1, .alien2, .alien3  {
-    position: relative; 
-    height: 60px;
-    width: 70px;
+    position: absolute; 
+    height: 55px;
+    width: 83px;
     left: 542px;
+    z-index: 995;
 }
-/*.alien1 img, .alien2 img, .alien3 img{
-    height: 60px;
-    width: 70px;
-}*/
+.placar {
+    position: absolute; 
+    display: flex;
+    left: 10px;
+    top: 10px;
+}
+.vidas {
+    height: 50px;
+    width: 130px;
+    
+}
+.pontos {
+    margin: auto;
+    margin-left: 20px;
+    width: 250px;
+    font-size: 35px;
+    color: aliceblue;
+    background-color: rgb(132, 255, 214, 0.2);
+}
 
-.explosao {
+#painel {
+    position: absolute; 
+    height: 400px;
+    width: 450px;
+    left: 280px;
+    top: 100px;
+    background-image: url("./assets/image/painel.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    text-align: center;
+}
+
+h1 {
+    position: absolute; 
+    color: aliceblue;
+    font-size: 25px;
+    left: 150px;
+    top: 10px;
+}
+h2 {
+    position: absolute; 
+    color: aliceblue;
+    font-size: 20px;
+    left: 152px;
+    top: 90px;
+}
+p {
+    position: absolute; 
+    color: aliceblue;
+    font-size: 15px;
+    left: 106px;
+    top: 140px;
+}
+strong {
+    color: red;
+}
+button {
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    position: absolute; 
+    background-color: rgba(103, 238, 13, 0.3);
+    font-size: 15px;
+    cursor: pointer;
+    overflow: hidden;
+    left: 112px;
+    top: 311px;
+}
+
+
+
+.explosao1, .explosao2, .explosao0 {
     width: 53px;
     height: 80px;
     position: absolute;
-    left: 550px;
-    top: 482px;
     background-image: url("./assets/image/explosion1.png");
     background-repeat: no-repeat;
     background-size: cover;
